[package]
name = "binance_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
# tokio = "1.36.0"
tokio = { version =  "1.36.0", features = ["rt-multi-thread"] }
tokio-macros = "2.2.0"

binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
teloxide = "0.12.2"
